--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,11 @@ body {
   gap: 35px;
 }
 
-.attribution {
-  font-size: 11px;
-  text-align: center;
+footer {
+  display: flex;
+  justify-content: center;
+  font-size: 1rem;
+  margin-bottom: 25px;
 }
 
 .attribution a {
@@ -58,6 +60,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-left: 10px;
 }
 
 .info .title {
@@ -76,6 +79,11 @@ body {
 */
 .content {
   width: 500px;
+}
+
+.content .trial {
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .content .trial .span-bold {
@@ -97,6 +105,8 @@ body {
   background-color: #fff;
   padding: 30px;
   border-radius: 8px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 /*
@@ -161,4 +171,17 @@ body {
   text-decoration: none;
   color: var(--red);
   font-weight: bold;
+}
+
+@media (max-width: 900px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+  .container .info {
+    width: 500px;
+    margin: 0 auto;
+  }
+  .info .title {
+    text-align: center;
+  }
 }
